--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: kpture/kpture
+  repository: ghcr.io/kpture/kpture
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
