--- a/chart/Chart.yaml
+++ b/chart/Chart.yaml
@@ -19,3 +19,8 @@ version: v0.0.34
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: "v0.0.34"
+
+dependencies:
+- name: dashboard
+  version: ~v0.0.0
+  repository: "https://kpture.github.io/newfrontend/"
