--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,6 +55,7 @@ jobs:
   check_helm:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - name: check helm chart
         run: |
           helm dep up chart
@@ -65,7 +66,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      # - uses: azure/setup-helm@v3
       - name: set repository safe
         run : git config --global --add safe.directory /github/workspace
       - name: create next tag
