--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,16 @@ on:
 jobs:
   # build:
   #   uses: ./.github/workflows/build.yml
+  check_helm:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: check helm chart
+        run: |
+          helm dep up chart
+          helm package chart
   docker:
+    needs: [check_helm]
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -52,14 +61,6 @@ jobs:
           push: true
           platforms: ${{ github.event.inputs.platform }}
           tags: "${{ matrix.image }}:${{ steps.bumptagfake.outputs.new_tag }}"
-  check_helm:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: check helm chart
-        run: |
-          helm dep up chart
-          helm package chart
 
   release:
     needs: [docker,check_helm]
@@ -140,6 +141,7 @@ jobs:
           repo=$(cut -d '/' -f 2 <<< "$GITHUB_REPOSITORY")
           git config user.email "$owner@users.noreply.github.com"
           git config user.name "$owner"
+          helm dependency update
           ./cr package chart
           ./cr index \
               --owner "$owner" \
